update readme file, implement po library integration along with spring wiring

--- a/build.xml
+++ b/build.xml
@@ -58,7 +58,7 @@
             <arg value="--format"/>
             <arg value="html:target/cucumber-html-report"/>
             <arg value="--glue"/>
-            <arg value="skeleton"/>
+            <arg value="alfresco-e2e"/>
             <arg value="src/test/resources"/>
         </java>
 
