--- a/pom.xml
+++ b/pom.xml
@@ -1,10 +1,9 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-
-    <groupId>cucumber</groupId>
-    <artifactId>cucumber-java-skeleton</artifactId>
-    <version>0.0.1</version>
+    <groupId>org.alfresco</groupId>
+    <artifactId>alfresco-e2e</artifactId>
+    <version>0.1</version>
     <packaging>jar</packaging>
     <name>alfresco-e2e</name>
     <description>Alfresco end to end functional test project</description>
@@ -26,6 +25,11 @@
             <artifactId>junit</artifactId>
             <version>4.11</version>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.alfresco</groupId>
+            <artifactId>share-po</artifactId>
+            <version>4.3.0-BF-SNAPSHOT</version>
         </dependency>
     </dependencies>
 </project>
