update test to work with 5.0.n

--- a/pom.xml
+++ b/pom.xml
@@ -27,9 +27,14 @@
             </exclusions>
         </dependency>
         <dependency>
+            <groupId>xml-apis</groupId>
+            <artifactId>xml-apis</artifactId>
+            <version>1.4.01</version>
+        </dependency>
+        <dependency>
             <groupId>org.alfresco</groupId>
             <artifactId>share-po</artifactId>
-            <version>5.0-BF-SNAPSHOT</version>
+            <version>5.0.1-SNAPSHOT</version>
         </dependency>
     </dependencies>
 </project>
